# RPi-Camera-Recorder

./: .gitignore  CMakeLists.txt  README.md  config.yaml  install.sh  single_camera.service
include/SingleCamera/: Application.hpp  Camera.hpp  Settings.hpp  StorageHandler.hpp  Timestamp.hpp
libs/YamlService/: YamlService.hpp
src/: Application.cpp  Camera.cpp  StorageHandler.cpp  main.cpp
